2007-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionGroupDesigner.cs, libsteticui/Designer.cs,
	  libsteticui/WidgetDesigner.cs: Added a property for getting the project
	  element being edited in the designer.
	* libsteticui/ComponentEventHandler.cs: Added property for getting the new
	  name in the args for the name change event.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/WidgetUtils.cs: Fix version comparison logic.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
	  libsteticui/Project.cs: Properly propagate the widget name change event
	  when saving the contents of the designer.

2007-09-06  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs: Removed unneeded code.

2007-09-06  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs: When
	  creating the designer, about creating twice the window widget (once for
	  the source project and once for the project being edited). Removed some
	  debug code.

2007-09-06  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionGroupDesigner.cs, libsteticui/ApplicationBackend.cs,
	  libsteticui/Designer.cs, libsteticui/Application.cs,
	  libsteticui/WidgetDesigner.cs: The Application.ActiveProject has been
	  replaced by Application.ActiveDesigner, which coveys more information
	  about what to show in the designer widgets.
	* libsteticui/ProjectBackend.cs, libsteticui/Project.cs, libstetic/DND.cs:
	  Implemented lazy loading of windows. The project now only loads the xml,
	  and only creates the widgets when they have to be shown in the designer.
	* libsteticui/WidgetEditSession.cs, libsteticui/WidgetTree.cs,
	  libsteticui/ProjectView.cs, libsteticui/ProjectViewBackend.cs: Renamed
	  ProjectView to WidgetTree. This widget now only displays the widget tree
	  of the currently active designer.